[package]
name = "simple-commits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
inquire = "0.7.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
sonic-rs = "0.3.4"
tokio = { version = "1.35.1", features = ["rt", "macros", "sync", "rt-multi-thread"] }
toml = "0.8.8"
